--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ config = "0.15.19"
 dotenvy = "0.15.7"
 serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
