--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ axum = "0.8.7"
 config = "0.15.19"
 dotenvy = "0.15.7"
 serde = { version = "1.0.228", features = ["derive"] }
+sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
 tokio = { version = "1.48.0", features = ["full"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
