feat: implement user signup with jwt authentication

--- a/.dev.env
+++ b/.dev.env
@@ -3,3 +3,5 @@
 APP_ENV=dev
 APP_HOST=127.0.0.1
 APP_PORT=3000
+JWT_SECRET=super_secret_change_me
+DATABASE_URL=postgres://devuser@localhost:5432/taskflow
