--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 argon2 = "0.5"
-axum = "0.8.7"
+axum = { version = "0.8.7", features = ["macros"] }
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.15.19"
 dotenvy = "0.15.7"
