--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 argon2 = "0.5"
-axum = { version = "0.8.7", features = ["macros"] }
+axum = { version = "0.8.7", features = ["macros", "ws"] }
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.15.19"
 dotenvy = "0.15.7"
+futures-util = "0.3.31"
 jsonwebtoken = "9"
 password-hash = "0.5"
 rand_core = "0.6"
